Date and time works, fixed .titles spacing,  useStates are now more dynamic

--- a/src/components/LinkButton.css
+++ b/src/components/LinkButton.css
@@ -15,8 +15,7 @@
     align-items: center;
 }
 
-.btnDiv img:hover {
-    opacity: 50%;
+.btnDiv:hover {
     transition: 0.3s;
   }
 
